Revision history for {{ $dist->name }}

{{$NEXT}}
  [Enhancments]
  - Use Crypt::URandom to seed the RNG.

  [Other]
  - Use Types::Common over Types::Standard.

v0.2.1    2023-01-11 14:43:34+00:00 Europe/London
  No Changes from v0.2.0.

v0.2.0    2023-01-10 09:24:16+00:00 Europe/London (TRIAL RELEASE)
  [Incompatible Changes]
  - Minimum Perl version is v5.14.

  [Documentation]
  - Add note that the source and format of the nonce may change in the future.

  - Documented support for older Perl versions.

  - Bumped copyright year.

  [Other]
  - Added GitHub Actions to run tests.

v0.1.4    2022-07-05 12:08:50+01:00 Europe/London
  [Documentation]
  - Fix typo in Changes.

v0.1.3    2022-06-29 17:16:15+01:00 Europe/London
  [Enhancements]
  - The nonce is combined with the PID to ensure it is unique after forking.

  [Documentation]
  - Added HTTP::SecureHeaders and Plack::Middleware::CSP to SEE ALSO.

  [Toolchain]
  - Sign release.

v0.1.2    2022-04-20 20:41:14+01:00 Europe/London
  [Documentation]
  - Added example of usage with Mojolicious.

  - Fixed typo.

  - Added note about when the reset method can be skipped.

v0.1.1    2022-04-04 11:20:36+01:00 Europe/London
  [Enhancements]
  - Removed Ref::Util from dependencies, but added Type::Tiny::XS as recommended.

  [Bug Fixes]
  - Disallow header being set from the constructor.

  [Documentation]
  - Added missing note to Changes.

v0.1.0    2022-04-03 13:26:16+01:00 Europe/London
  - Initial version released.